--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,9 @@
       				<h1>{{page.title}}</h1>
       				<p>{{page.excerpt}}</p>
       			</header>
-      			<div class="image main"><img src="{{page.image}}" alt=""></div>
+      			<div class="image main" style="max-height: 50em; width: auto;>
+				<img src="{{page.image}}" alt="">
+			</div>
       			<p>{{content}}</p>
       		</section>
 
