--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,8 +38,8 @@
       				<h1>{{page.title}}</h1>
       				<p>{{page.excerpt}}</p>
       			</header>
-      			<div class="image main">
-				<img src="{{page.image}}" alt="" style="max-height: 30em; width: auto; height: auto;>
+      			<div class="image main" style="width: auto; height: auto;">
+				<img src="{{page.image}}" alt="" style="max-height: 30em; margin-bottom: 2em;">
 			</div>
       			<p>{{content}}</p>
       		</section>
