--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
       				<p>{{page.excerpt}}</p>
       			</header>
       			<div class="image main" style="width: auto; height: auto;">
-				<img src="{{page.image}}" alt="" style="max-height: 30em; margin-bottom: 2em; margin-left: auto; margin-right: auto;">
+				<img src="{{page.image}}" alt="" style="max-height: 30em; height: auto; width: auto; margin-bottom: 2em; margin-left: auto; margin-right: auto;">
 			</div>
       			<p>{{content}}</p>
       		</section>
