--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,9 @@
       				<h1>{{page.title}}</h1>
       				<p>{{page.excerpt}}</p>
       			</header>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/i29L717bOyo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              
+              
       			<div class="image main" style="width: auto; height: auto;">
 				<img src="{{page.image}}" alt="" style="max-height: 30em; max-width: 100%; height: auto; width: auto; margin-bottom: 2em; margin-left: auto; margin-right: auto;">
 			</div>
